# ProxyPool

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  docker-compose.yml  plan.md  pyproject.toml
config/: upstreams.example.txt
helper/: auth.py  compat_ports.py  config_center.py  i18n.py  persistence.py  proxy_server.py  proxy_tags.py  requirements.txt  router.py  upstream_pool.py  web_admin.py
helper/admin_web/: __init__.py  app_runtime.py  auth.py  context.py  flask_hybrid.py  http.py  i18n_utils.py  logs.py  resources.py  server.py  templating.py
helper/admin_web/jinja_templates/: base.html
helper/admin_web/jinja_templates/api/: page.html
helper/admin_web/jinja_templates/auth/: login.html  setup.html
helper/admin_web/jinja_templates/compat/: _form.html  _mappings.html  page.html
helper/admin_web/jinja_templates/config/: form.html
helper/admin_web/jinja_templates/dashboard/: index.html
helper/admin_web/jinja_templates/logs/: view.html
helper/admin_web/rendering/: layout.py
helper/admin_web/routes/: __init__.py  api.py  auth.py  compat.py  config.py  dashboard.py  logs.py  proxies.py
helper/locales/: en.json  zh.json
scripts/: benchmark_chain_latency.sh  gen_squid_conf.py  generate_upstream_list.py  reset_admin_password.py  verify.sh  verify_real.sh
squid/: Dockerfile  entrypoint.sh
tests/: test_admin_log_timestamps.py  test_e2e.py  test_e2e_browser.py  test_i18n.py  test_persistence.py  test_proxy_server.py  test_reset_admin_password.py  test_upstream_pool.py  test_verify_script.py  test_web_admin.py
(+12 files in other folders)
